--- a/OpenSmartCard/OpenSmartCard.csproj
+++ b/OpenSmartCard/OpenSmartCard.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DllExport" Version="1.7.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
